--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>JS Playground</title>
-
+    <title>Multiplayer TeamGen</title>
+    <!-- //stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
-
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+    <!-- //fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&family=Ubuntu+Mono:wght@400;700&family=VT323&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" href="app.css">
 
@@ -21,8 +24,13 @@
 
 <body>
     <div class="container">
-        <div class="jumbotron">
-            <h1>Multiplayer Team Generator</h1>
+        <div class="my-jumbo">
+            <h1 class="page-title">Multiplayer Team Generator</h1>
+            <div class="subtitle-div">
+                <div class="title-decoration deco-1"></div>
+                <h4 class="subtitle">Shake things up.</h4>
+                <div class="title-decoration deco-2"></div>
+            </div>
         </div>
 
         <div class="card-deck">
@@ -31,8 +39,13 @@
                     <h3 class="card-title">How it works</h3>
                 </div>
                 <div class="card-body">
-                    <p>Ever struggle splitting your party of friends into multiple teams/groups?<br> Not Anymore :)
-                    </p>
+                    <div class="info-div">
+                        <hr class="card-hr">
+                        <h5>Divide your party into teams</h5>
+                        <hr class="card-hr">
+                    </div>
+
+
                     <ol>
                         <li>Enter the number of players allowed per group/team</li>
                         <li>Input player names one at a time.</li>
@@ -45,28 +58,37 @@
                     <h3 class="card-title">Generator</h3>
                 </div>
                 <div class="card-body">
-                    <div class="row">
-                        <div class="col">
-                            <label for=" numPerTeamDropDown">
-                                <h5>Players Per Team</h5>
-                            </label>
+                    <hr class="card-hr">
+
+                    <form>
+                        <div class="form-row">
+                            <div class="col players-per-team-div">
+                                <label for="numPerTeamDropDown">
+                                    <h5>Players Per Team</h5>
+                                </label>
+                                <select name="players per team" id="numPerTeamDropDown" class="form-control">
+                                    <option>Select</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                    <option value="9">9</option>
+                                    <option value="10">10</option>
+                                </select>
+                            </div>
                         </div>
-                        <div class="col text-center">
-                            <select name="players per team" id="numPerTeamDropDown">
-                                <option>Select</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <option value="9">9</option>
-                                <option value="10">10</option>
-                            </select>
+                        <div class="form-row">
+
+
                         </div>
-                    </div>
+                    </form>
+
+
+                    <hr class="card-hr">
                     <div class="row text-center">
                         <div class="col">
                             <div class="input-group mb-3">
@@ -82,13 +104,13 @@
 
                     <div class="row text-center">
                         <div class="col">
-                            <div class="players-div">
-                                <hr class="mb-4 players-added-hr">
-                                <h5 class="players-added">Players</h5>
-                                <div id="user-input-div">
-                                    <h6 class="info-text text-muted mt-5">Player names will appear here...</h6>
-                                </div>
+                            <div class="info-div">
+                                <hr class="card-hr">
+                                <h5>Players</h5>
+                                <hr class="card-hr">
                             </div>
+
+                            <div id="user-input-div"></div>
                         </div>
                     </div>
                 </div>
@@ -96,10 +118,10 @@
         </div>
 
 
-        <div class="hr-button-div my-5">
+        <div class="hr-button-div">
             <hr>
             <div class="program-button-div">
-                <button class="btn btn-success btn-lg generate-button" type="button" name="submitBtn"
+                <button class="btn btn-success btn-lg generate-button mr-2" type="button" name="submitBtn"
                     id="submitBtn">Generate
                     Teams</button>
                 <button class="btn btn-warning btn-lg reset-button" type="button" name="resetBtn"
@@ -110,7 +132,7 @@
             <div class="col">
                 <div class="card result-card">
                     <div class="card-header">
-                        <h3>Generated Teams</h3>
+                        <h3 class="card-title">Generated Teams</h3>
                     </div>
                     <div class="card-body" id="result-div">
                         <h6 class="text-muted">Player names will appear here...</h6>
@@ -119,9 +141,7 @@
             </div>
 
         </div>
-
     </div>
-
 
 
 
@@ -138,7 +158,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+
     <script src="app.js"></script>
+
 </body>
 
 
