--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="node_modules\@fortawesome\fontawesome-free\css\all.css">
     <link rel="stylesheet" href="app.css">
-
 </head>
 
 <body>
@@ -31,7 +30,6 @@
                 <div class="title-decoration deco-2"></div>
             </div>
         </div>
-
         <div class="card-deck">
             <div class="card mb-4">
                 <div class="card-header">
@@ -62,7 +60,6 @@
                                 <h5>Players Per Team</h5>
                             </label>
                         </div>
-
                         <div class="col-6 col-sm-12 col-lg-6 players-per-team-select">
                             <select name="players per team" id="numPerTeamDropDown" class="form-control select">
                                 <option class=>Select</option>
@@ -79,7 +76,6 @@
                             </select>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="col">
                             <div class="input-group mb-3">
@@ -91,23 +87,22 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                     <div class="row text-center">
                         <div class="col">
                             <div class="info-div">
                                 <hr class="card-hr">
-                                <h5>Players</h5>
+                                <h5 class="">Players</h5>
                                 <hr class="card-hr">
                             </div>
-                            <div id="user-input-div"></div>
+                            <div class="user-input-div" id="user-input-div">
+                                <h6 class="text-muted mt-3">Player names will appear here...</h6>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-
         <div class="hr-button-div">
             <hr>
             <div class="program-button-div">
@@ -132,9 +127,6 @@
 
         </div>
     </div>
-
-
-
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
