final vanilla js product

--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
         </div>
     </div>
 
+    <div class="footer">
+        <p class="credit-text">&copy; 2020 Brendan Roman</p>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
