fa cdn gitpages test

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="all.css">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+        integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -84,7 +84,7 @@
                                     placeholder="Add a Player">
                                 <div class="input-group-append">
                                     <button class="btn btn-info" type="button" name="addPlayer" id="addPlayerBtn"><i
-                                            class="fas fa-plus"></i></button>
+                                            class="fa fa-plus"></i></button>
                                 </div>
                             </div>
                         </div>
