--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     placeholder="Add a Player">
                                 <div class="input-group-append">
                                     <button class="btn btn-info" type="button" name="addPlayer" id="addPlayerBtn"><i
-                                            class="fa fa-plus"></i></button>
+                                            class="fas fa-plus"></i></button>
                                 </div>
                             </div>
                         </div>
