--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <hr class="card-hr">
                     </div>
                     <ol>
-                        <li>Enter the number of players allowed per group/team</li>
+                        <li>Enter the number of players allowed per group/team.</li>
                         <li>Input player names one at a time.</li>
                         <li>Click generate! It's that easy.</li>
                     </ol>
