--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                     id="resetBtn">Reset</button>
             </div>
         </div>
-        <div class="row generated-teams-row">
-            <div class="col">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
                 <div class="card result-card">
                     <div class="card-header">
                         <h3 class="card-title">Generated Teams</h3>
